use hack to change full width caption. minor changes

--- a/01-elecstat.tex
+++ b/01-elecstat.tex
@@ -6,7 +6,7 @@
 
 \section{Purpose}
 Electrostatic is concerned with the effect of stationary electrons---that is, charge distributions that are not changing.  We would like you to apply the concepts of \textbf{Coulomb's Law}%
-\sidenote[][-0.75in]{
+\sidenote[][-1.7cm]{% 0.75in
 	Coloumb's Law expresses the \textit{force} between two charges ($q_{1}$ and $q_{2}$).  It is written as:
 	\begin{equation}
 		F=k\frac{|q_{1}q_{2}|}{r^{2}}\nonumber
@@ -15,28 +15,30 @@ Electrostatic is concerned with the effect of stationary electrons---that is, ch
 	
 	We'll learn later how we determine the constant but for now, we will use the accepted value of 
 	\begin{equation}
-		k\simeq8.99\times10^{9}\textrm{N}\cdot\textrm{m}^{2}/\textrm{C}^{2}
-		\nonumber
+		k\simeq8.99\times10^{9}\textrm{N}\cdot\textrm{m}^{2}/\textrm{C}^{2}\nonumber
 	\end{equation}
-	See Equation 17.1 in your textbook} and the \textbf{polarization of charge}.  At the end, you should be able to demonstrate by graphing data you have collected that the equation for the Coulomb force is correct to within your measurement accuracy.	
+	%See Equation 17.1 in your textbook
+	} 
+	and the \textbf{polarization of charge}.  At the end, you should be able to demonstrate by graphing data you have collected that the equation for the Coulomb force is correct to within your measurement accuracy.	
 		
 %--------------------------------------------------------------------------
 \section{Preparation}
-Make sure that you understand the concepts introduced in Sections 17.1-17.3 of your textbook.  Read Section 17.4 of your textbook and work out Examples 17.1 and 17.2 in that section.  
+Make sure that you understand the concepts introduced in the sections on Coulomb's Law of your textbook.  %Read Section 17.4 of your textbook and work out Examples 17.1 and 17.2 in that section.  
 
-\newthought{At the beginning of the lab}, your instructor may ask you to take a short quiz on the material covered in Sections 17.1-17.4.  Be sure you are ready to answer questions such as: ``How many types of charge are there?" and ``Is charge conserved?"  You may also be asked to write a short paragraph on topics from these sections such as electrostatic induction
+\newthought{At the beginning of the lab}, your instructor may ask you to take a short quiz on the material covered on electric charge and Coulombs's Law. %in Sections 17.1-17.4.  
+Be sure you are ready to answer questions such as: ``How many types of charge are there?" and ``Is charge conserved?"  You may also be asked to write a short paragraph on topics from these sections such as electrostatic induction
 %\sidenote{Section 17.2}
 , conservation of charge
 %\sidenote{Section 17.3} 
 or superposition.
 %\sidenote{End of Section 17.4}.
 %--------------------------------------------------------------------------
-\section{General Information}
-%\begin{framed}
 \begin{marginfigure}%[-0.75in]
-	\includegraphics[width=\linewidth]{electroscope.pdf}
+	\includegraphics[width=0.85\linewidth]{electroscope.pdf}
 	\caption{The electroscope is shown with a charge distribution.  As more charge of the same polarity accumulates in the gold leaves, they repel each other by \textit{Coulomb force}.  This works the same for positive charge as it does for negative charge.}
 \end{marginfigure}
+\section{General Information}
+
 \paragraph{Electroscope and its use.} 
 The electroscope is a sealed vessel containing a gold foil leaf and a conducting rod as shown in the diagram on the right.  As a charged rod nears the top ball, the charges in the ball are repelled down the conducting rod and into the foil.  There, Coulomb force will cause the foil leaves to separate.  Your instructor will demonstrate the proper use of this instrument.
 
@@ -46,7 +48,7 @@ The electroscope is a sealed vessel containing a gold foil leaf and a conducting
 \vspace{7pt}
 \hrule 
 \end{quote}
-%\end{framed}
+
 \paragraph{Isolating positive and negative charge.}  You should assume that excess positive charge has been left on the glass rod rubbed with silk and excess negative charge is left on a rubber rod rubbed with wool\sidenote{While we will not verify the truth of these assumptions in the planned content of this lab, can you think of a way to determine whether they are true?  What other assumptions do you need to make in order to prove this?}.
 
 \paragraph{What is a positive charge?}  Electrons carry negative charge and move easily.  Protons carry positive charge but are much larger and do not move readily in most materials.  But all matter is made up of protons, electrons and neutrons (neutral particles).  So if the number of electrons and protons in an area is roughly equal\sidenote{Some caveats apply to this statement, of course, but it is generally true}, the charges cancel out and there is no net Coulomb force.  By moving electrons into and out of an area without an equivalent number of protons, we induce a net charge, either negative or positive.  
@@ -94,6 +96,7 @@ For each activity, mark the associated number in your lab report and detail your
 Your instructor will have demonstrated charging the electroscope by induction--that is, without physically touching the metal ball.  Ask for help if you are unable to duplicate this.  Remember to start with an uncharged electroscope.
 \hrule
 \end{quote}
+
 \begin{enumerate}[resume]
 	\item Using the charged rods and rulers, estimate the effect of induction at specific distances.  How far away can a charged rod be before you observe the leaves moving?
 	 \item Starting with the distance you just determined, make the same measurement at 4 additional, smaller distances.  Estimate the distance between the tips of the leaves or the angle they form.  Be sure to record your data in a table.
@@ -106,19 +109,25 @@ Your instructor will have demonstrated charging the electroscope by induction--t
 
 Discuss briefly whether or not your observations today give you any information on the following aspects of Coulomb's law.  Describe which activity or activities provided the information. Use the data you gathered in the induction section to make a plot of displacement against distance between the charged rod and ball.
 \begin{enumerate}
-	\item Coulomb force acts at a distance.
-	\item Coulomb force is inversely proportional to distance.
-	\item Coulomb force is inversely proportional to distance squared.
-	\item Coulomb force is proportional to the product of the charges involved.
+	\item Coulomb force acts at a distance.\marginpar{$F \propto r$}
+	\item Coulomb force is inversely proportional to distance. \marginpar{$F \propto r^{-1}$}
+	\item Coulomb force is inversely proportional to distance squared. \marginpar{$F \propto r^{-2}$}
+	\item Coulomb force is proportional to the product of the charges. \marginpar{$F \propto q_1q_2$} 
 	\item Coulomb force acts along a line joining the charges involved.
 \end{enumerate}
 
 %--------------------------------------------------------------------------
-\vfill
+%\vfill
+\vskip10em
 \begin{figure*}
-	\centering
+%	\centering
 	\includegraphics[width=0.85\textwidth]{triboelectricity.pdf}
-	\caption[Chart of Triboelectricity]{\textsc{Chart of Trioboelectricity}: When rubbing two materials together, the electrons will tend to migrate from items on the left to items on the right.  The electrons in materials on the left are less tightly bound to their nuclei.  This is why rubbing glass rod with silk will create a positively charged rod while rubbing a rubber rod with wool will create a negatively charged one.}
+%	\caption[Chart of Triboelectricity]{\textsc{Chart of Trioboelectricity}: When rubbing two materials together, the electrons will tend to migrate from items on the left to items on the right.  The electrons in materials on the left are less tightly bound to their nuclei.  This is why rubbing glass rod with silk will create a positively charged rod while rubbing a rubber rod with wool will create a negatively charged one.}
+
+\stepcounter{figure}	% 2 line hack to change caption in a full width float
+\smallskip\noindent\small Figure \thefigure: 
+	{\textsc{Chart of Trioboelectricity}: When rubbing two materials together, the electrons will tend to migrate from items on the left to items on the right.  The electrons in materials on the left are less tightly bound to their nuclei.  This is why rubbing glass rod with silk will create a positively charged glass rod while rubbing a rubber rod with wool will create a negatively charged rubber rod.}
+
 \end{figure*}
 %--------------------------------------------------------------------------
 \endinput
