made sm changes to lab2 and 3

--- a/00-titleinside.tex
+++ b/00-titleinside.tex
@@ -1,21 +1,40 @@
 % !TEX root = 5b-main.tex
-
+%	minor code changes: 2014.02.05
 %----title page------------------------------------------------------------
 %\begin{comment}
+%\begin{fullwidth}
+%\thispagestyle{empty}		% prevent page numbering of title pages
+%\vspace*	{2in}
+%\begin{center}
+%	\HUGE\textsf{Physics 5B}\par
+%\end{center}
+%\begin{center}
+%	\LARGE\textsf{Laboratory Manual}\par
+%\end{center}
+%\begin{center}
+%	\HUGE\textsf{Electricity, Magnetism, Optics}\par
+%\end{center}
+%\begin{center}
+%	\Huge\textsf{August 2013}\par
+%\end{center}
+%\vfill
+%\begin{center}
+%%	\LARGE\textsf{Zolili Ndlela\\Editor, Spring 2013 Revision}\par
+%\LARGE\textsf{California State University, Sacramento}\par
+%\end{center}
+% 
+%\vspace*{\fill}
+%
+%\end{fullwidth}
+
 \begin{fullwidth}
 \thispagestyle{empty}		% prevent page numbering of title pages
 \vspace*	{2in}
 \begin{center}
-	\HUGE\textsf{Physics 5B}\par
-\end{center}
-\begin{center}
-	\LARGE\textsf{Laboratory Manual}\par
-\end{center}
-\begin{center}
-	\HUGE\textsf{Electricity, Magnetism, Optics}\par
-\end{center}
-\begin{center}
-	\Huge\textsf{August 2013}\par
+	\HUGE\textsf{Physics 5B}\\[0.2em]
+	\LARGE\textsf{Laboratory Manual}\\[1em]
+	\HUGE\textsf{Electricity, Magnetism, Optics}\\[0.2em]
+	\Huge\textsf{August 2014}\\
 \end{center}
 \vfill
 \begin{center}
@@ -26,4 +45,5 @@
 \vspace*{\fill}
 
 \end{fullwidth}
+
 \clearpage
